benchmark: fix consuming the results, add filterSumBranchless